--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ target/
 **/src/main/resources/application.properties
 **/src/test/resources/application.properties
 
+# Application Certificates
+/src/main/resources/certificates/
+
 ### STS ###
 .apt_generated
 .classpath
